# oxidize-ebpf

./: Dev_Environment.md  README.md  Vagrantfile  install.md  rustfmt.toml
binary-probe/: Cargo.toml  README.md  test.c
binary-probe/binary-probe/: Cargo.toml
binary-probe/binary-probe-common/: Cargo.toml
binary-probe/binary-probe/src/: main.rs
block-binary/: Cargo.toml
block-binary/block-binary-ebpf/: Cargo.toml
block-mount/: Cargo.toml  README.md
block-mount/block-mount-common/: Cargo.toml
block-mount/block-mount-ebpf/: Cargo.toml
firewall/: Cargo.toml
firewall/firewall/: Cargo.toml
firewall/firewall-ebpf/: Cargo.toml
kernel-probe/: Cargo.toml
kprobe/: README.md
kprobe-block-mount/: README.md
kprobe-block-mount/.vim/: coc-settings.json
kprobe-block-mount/block-mount/: Cargo.toml
kprobe/kernel-probe/: Cargo.toml
kprobe/kernel-probe-common/: Cargo.toml
kprobe/kernel-probe-ebpf/: Cargo.toml
lsm/: README.md
lsm/block-binary/: Cargo.toml
lsm/block-binary-common/: Cargo.toml
packet-counter/: README.md
packet-counter/.vim/: coc-settings.json
packet-counter/packet-counter-ebpf/: Cargo.toml
prg-arr-map/: Cargo.toml  README.md
prg-arr-map/prg-arr-map/: Cargo.toml
prg-arr-map/prg-arr-map-common/: Cargo.toml
prg-arr-map/prg-arr-map-ebpf/: Cargo.toml
prg-arr-map/prg-arr-map/src/: .main.rs.swp  main.rs
rbpf-vm/: Cargo.toml
rbpf-vm/src/: main.rs
socket-filter/: Cargo.toml
socket-filter/packet-counter/: Cargo.toml
socket-filter/packet-counter-common/: Cargo.toml
tc/: README.md
tc/tc/: Cargo.toml
tc/tc-ebpf/: Cargo.toml
tracepoint/: Cargo.toml
tracepoint-demo/: README.md
tracepoint-demo/tracepoint-demo/: Cargo.toml
tracepoint-demo/tracepoint-demo/src/: main.rs
uprobe/: README.md  test
xdp-firewall/: README.md
(+57 files in other folders)
