[package]
name = "binary-probe"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
binary-probe-common = { path = "../binary-probe-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
libc = "0.2.102"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
simplelog = "0.10"

[[bin]]
name = "binary-probe"
path = "src/main.rs"
