[package]
name = "prg-arr-map"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
simplelog = "0.10"
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
prg-arr-map-common = { path = "../prg-arr-map-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
libc = "0.2.134"

[[bin]]
name = "prg-arr-map"
path = "src/main.rs"
